[package]
name = "iot_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
log = "0.4.17"
log4rs = "1.2.0"
nym-sdk = { git = "https://github.com/nymtech/nym" }
tokio = { version = "1.27.0", features = ["full"] }
env_logger = "0.10.0"
testing_logger = "0.1.1"

[dev-dependencies]
rusty-hook = "^0.11.2"
